# ab-homebooks-django

./: .dockerignore  .gitignore  README.md  docker-compose.yml
compose/: dev.Dockerfile
compose/base/: base.Dockerfile  build.sh
compose/postgres/: Dockerfile
compose/wait-for/: simple-for-postgres.sh  wait-a.sh  wait-for-postgres.sh
envs/: local_debug.env
homebooks/: docker-compose.yml  manage.py  pyproject.toml  testusers.yaml
homebooks/accounts/: admin.py  forms.py  models.py  my_auth.py  serializers.py  tasks.py  urls.py  views.py
homebooks/accounts/management/commands/: makeuser.py
homebooks/accounts/migrations/: 0001_initial.py
homebooks/accounts/templates/accounts/: done.html  empty.html  html5.html  signupformview.html
homebooks/accounts/utils/: make_user_yaml.py  test_users.yaml
homebooks/books/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
homebooks/bookshelves/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
homebooks/bookshelves/migrations/: 0001_initial.py
homebooks/homebooks/: asgi.py  celery.py  urls.py  views.py  wsgi.py
homebooks/homebooks/settings/: base.py  dev.py  development.py  development_postgresql.py  local_debug.py
homebooks/homebooks/templates/: home.html
homebooks/mybooks/: apps.py  models.py  serializers.py  urls.py  views.py
homebooks/mybooks/migrations/: 0001_initial.py
presentation/: Untitled Diagram.drawio
servers/development/: .env.development
servers/development_server/: .env.development  .env.development.django  .env.development.postgres  dockerfile  (+2 more)
(+8 files in other folders)
