[tool.poetry]
name = "homebooks"
version = "0.1.0"
description = ""
authors = ["noname2048 <sungwook.csw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
Django = "^3.2"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.8.6"
django-storages = "^1.11.1"
black = "^21.4b2"
django-pydenticon = "^0.2"
django-cors-headers = "^3.7.0"
djangorestframework-jwt = "^1.11.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.17.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.2.1"
Faker = "^8.1.2"
django-extensions = "^3.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
